# rspack

./: Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  x.mjs
.github/workflows/: reusable-build-build.yml
crates/node_binding/: Cargo.toml  binding.d.ts  binding.js  package.json
crates/node_binding/src/raw_options/raw_builtins/: mod.rs  raw_demo.rs
crates/rspack_plugin_demo/: Cargo.toml
crates/rspack_plugin_demo/src/: lib.rs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64-gnu/: package.json
npm/wasm32-wasi/: package.json
npm/win32-x64-msvc/: package.json
scripts/: build-npm.cjs
