[package]
name = "rspack_plugin_demo"
version = "0.2.0"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rspack_core  = { workspace = true }
rspack_hook  = { workspace = true }
rspack_error = { workspace = true }
rspack_regex = { workspace = true }
tracing      = { workspace = true } 

[lints]
workspace = true
